--- a/config.yaml
+++ b/config.yaml
@@ -12,9 +12,21 @@ params:
   description: Find out more about PX-Backup, the persistent storage solution for containers. Come check us out for step-by-step guides and tips!
   keywords: PX-Backup, px-enterprise, px-developer, containers, storage
   githubRepo: https://github.com/portworx/pxdocs-backup
-
+  algolia:
+    vars:
+      - title
+      - summary
+      - date
+      - publishdate
+      - expirydate
+      - permalink
 
 outputFormats:
+  Algolia:
+    baseName: algolia
+    isPlainText: true
+    mediaType: application/json
+    notAlternative: true
   Redirects:
     baseName: redirects
     isPlainText: true
@@ -25,4 +37,5 @@ outputs:
   home:
     - HTML
     - RSS
+    - Algolia
     - Redirects
