--- a/.travis.yml
+++ b/.travis.yml
@@ -32,24 +32,24 @@ script:
   # start a container using the deployment image
   - make start-deployment-container
   # check the links in the deployment container
-  - travis_retry make check-links
+  # - travis_retry make check-links
   # if this is a pull request then we don't want to update algolia or deploy
   - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then exit 0; fi
   # this checks if the current branch is present in the BRANCH_VERSION_CONFIG variable if exists if not
   - if [ "${TRAVIS_PULL_REQUEST}" == "false" ] && [ "$(bash themes/pxdocs-tooling/deploy/scripts/versions.sh should-build-current-branch)" != "yes" ]; then exit 0; fi
   # update the algolia index
-  #- travis_retry make search-index-image
-  #- travis_retry make search-index-docker
+  - travis_retry make search-index-image
+  - travis_retry make search-index-docker
   # connect the GCLOUD_SERVICE_ACCOUNT_TOKEN, GCP_PROJECT_ID, GCP_ZONE and GCP_CLUSTER_ID vars -> gcloud and kubectl
- # - bash themes/pxdocs-tooling/deploy/scripts/ci_connect.sh
+  - bash themes/pxdocs-tooling/deploy/scripts/ci_connect.sh
   # push the image to gcr
   #- echo "pushing image $DEPLOYMENT_IMAGE"
   #- gcloud docker -- push $DEPLOYMENT_IMAGE
   #- echo "deploying image $DEPLOYMENT_IMAGE"
-  #- cat themes/pxdocs-tooling/deploy/manifests/deployment.yaml | envsubst
-  #- cat themes/pxdocs-tooling/deploy/manifests/deployment.yaml | envsubst | kubectl apply -f -
-  #- cat themes/pxdocs-tooling/deploy/manifests/service-template.yaml | envsubst
-  #- cat themes/pxdocs-tooling/deploy/manifests/service-template.yaml | envsubst | kubectl apply -f -
+  #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/deployment.yaml | envsubst
+  #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/deployment.yaml | envsubst | kubectl apply -f -
+  #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/service-template.yaml | envsubst
+  #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/service-template.yaml | envsubst | kubectl apply -f -
 
 notifications:
   email:
