--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,15 @@ script:
   # make the build fail if there are any errors
   - set -e
   # setup variables based on travis env
+  # docker builds cannot use uppercase characters in the image name
+  - export LOWER_CASE_BRANCH=$(echo -n $TRAVIS_BRANCH | awk '{print tolower($0)}')
   - export BUILDER_IMAGE="pxbackup:$TRAVIS_COMMIT"
-  # - export SEARCH_INDEX_IMAGE="pxbackup-indexer:$TRAVIS_COMMIT"
-  - export DEPLOYMENT_IMAGE="gcr.io/$GCP_PROJECT_ID/pxbackup-$TRAVIS_BRANCH:$TRAVIS_COMMIT"
+  - export SEARCH_INDEX_IMAGE="pxbackup-indexer:$TRAVIS_COMMIT"
+  - export DEPLOYMENT_IMAGE="gcr.io/$GCP_PROJECT_ID/pxbackup-$LOWER_CASE_BRANCH:$TRAVIS_COMMIT"
   - export VERSIONS_CURRENT=$(bash themes/pxdocs-tooling/deploy/scripts/versions.sh get-current-branch-version)
   - export VERSIONS_ALL=$(bash themes/pxdocs-tooling/deploy/scripts/versions.sh get-all-versions)
   - export VERSIONS_TAG=$(echo -n "$VERSIONS_CURRENT" | sed 's/\./-/g')
-  # - export ALGOLIA_INDEX_NAME=$VERSIONS_TAG
+  - export ALGOLIA_INDEX_NAME=$VERSIONS_TAG
   # build images
   - travis_retry make image
   # publish site -> public
