--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ script:
   # push the image to gcr
   - echo "pushing image $DEPLOYMENT_IMAGE"
   - gcloud docker -- push $DEPLOYMENT_IMAGE
-  #- echo "deploying image $DEPLOYMENT_IMAGE"
-  #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/deployment.yaml | envsubst
+  - echo "deploying image $DEPLOYMENT_IMAGE"
+  - cat themes/pxdocs-tooling/deploy/manifests/pxbackup/deployment.yaml | envsubst
   #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/deployment.yaml | envsubst | kubectl apply -f -
   #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/service-template.yaml | envsubst
   #- cat themes/pxdocs-tooling/deploy/manifests/pxbackup/service-template.yaml | envsubst | kubectl apply -f -
