--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,15 @@ script:
   # make the build fail if there are any errors
   - set -e
   # setup variables based on travis env
+  - export PRODUCT_NAME=PX-Backup
+  - export ALGOLIA_API_KEY=e0824d7d48a118c054a077bc087bc976
+  - export ALGOLIA_APP_ID=EWKZLLNQ9L
+  - export BRANCH_VERSION_CONFIG=1.0=1.0
+  - export GCP_CLUSTER_ID=production-app-cluster
+  - export GCP_PROJECT_ID=production-apps-210001
+  - export GCP_ZONE=us-west1-b
+  - export LATEST_VERSION=1.0
+  - export VERSIONS_BASE_URL=backup.docs.portworx.com
   # docker builds cannot use uppercase characters in the image name
   - export LOWER_CASE_BRANCH=$(echo -n $TRAVIS_BRANCH | awk '{print tolower($0)}')
   - export BUILDER_IMAGE="pxbackup:$TRAVIS_COMMIT"
@@ -24,18 +33,22 @@ script:
   - export VERSIONS_CURRENT=$(bash themes/pxdocs-tooling/deploy/scripts/versions.sh get-current-branch-version)
   - export VERSIONS_ALL=$(bash themes/pxdocs-tooling/deploy/scripts/versions.sh get-all-versions)
   - export VERSIONS_TAG=$(echo -n "$VERSIONS_CURRENT" | sed 's/\./-/g')
-  - export ALGOLIA_INDEX_NAME=$VERSIONS_TAG
-  - echo $ALGOLIA_INDEX_NAME
+  - export ALGOLIA_INDEX_NAME="${PRODUCT_NAME}-${VERSIONS_TAG}"
+  - export OTHER_PRODUCT_NAMES_AND_INDICES=PX-Enterprise=PX-Enterprise-2-5
+  - export PRODUCT_NAMES_AND_INDICES="${PRODUCT_NAME}=${PRODUCT_NAME}-${TRAVIS_BRANCH/./-},${OTHER_PRODUCT_NAMES_AND_INDICES}"
   # build images
   - travis_retry make image
   # publish site -> public
   - make publish-docker
+  # set the value of the `NGINX_REDIRECTS_FILE` environment variable
+  - if [ "${VERSIONS_BASE_URL}" '==' "docs.portworx.com" ]; then export NGINX_REDIRECTS_FILE=px-enterprise-redirects.conf ; fi
+  - if [ "${VERSIONS_BASE_URL}" '==' "backup.docs.portworx.com" ]; then export NGINX_REDIRECTS_FILE=px-backup-redirects.conf ; fi
   # build the deployment image
   - travis_retry make deployment-image
   # start a container using the deployment image
   - make start-deployment-container
   # check the links in the deployment container
-  # - travis_retry make check-links
+  - travis_retry make check-links
   # if this is a pull request then we don't want to update algolia or deploy
   - if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then exit 0; fi
   # this checks if the current branch is present in the BRANCH_VERSION_CONFIG variable if exists if not
