--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ params:
   narrowToolbarTitle: PX-Backup Documentation narrowtoolbar
   wideToolbarTitle: PX-Backup Documentation widetoolbar
   description: Find out more about PX-Backup, the persistent storage solution for containers. Come check us out for step-by-step guides and tips!
-  keywords: PX-Backup, px-enterprise, px-developer, containers, storage
+  keywords: PX-Backup, Portworx Enterprise, PX-Developer, containers, storage
   githubRepo: https://github.com/portworx/pxdocs-backup
   algolia:
     vars:
