PD-589: Replace existing linkchecker with wjdp/htmltest
PD-589: Replace existing linkchecker with wjdp/htmltest

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ public
 .env
 node_modules
 .DS_Store
+htmltest/bin/htmltest
+htmltest/tmp/.htmltest/refcache.json
+htmltest/tmp/.htmltest/htmltest.log
