--- a/htmltest/.htmltest.yml
+++ b/htmltest/.htmltest.yml
@@ -13,6 +13,7 @@ IgnoreDirs:
 - "js"
 - "logos"
 - "samples"
+- "shared"
 CacheExpires: "24h"
 IgnoreInternalEmptyHash: true
 IgnoreDirectoryMissingTrailingSlash: true
