--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
 notifications:
   email:
     recipients:
-      - nathaniel.wilson@portworx.com
+      - nwilson@purestorage.com
     on_success: change
     on_failure: always
