Use Travis add-ons to install yq
Use Travis add-ons to install yq

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ cache:
   directories:
     - ./htmltest/tmp
 
+addons:
+  snaps:
+    - yq
+
 before_install:
   # update gcloud apt source
   - bash ./themes/pxdocs-tooling/build/before_install.sh
